--- a/app/src/main/res/layout/fragment_market.xml
+++ b/app/src/main/res/layout/fragment_market.xml
@@ -21,7 +21,7 @@
        android:layout_marginLeft="100dp"
        android:background="@drawable/search_bg"
        app:queryHint="Search"
-       android:textAppearance="@color/black"
+       android:textAppearance="@color/blue"
        app:iconifiedByDefault="false"
        >
    </androidx.appcompat.widget.SearchView>
