--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,18 +57,21 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:backgroundTint="@color/white"
+            android:inputType="textPassword"
             android:id="@+id/pass"
             android:hint="Password" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/forgot"
+        android:id="@+id/forgottv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="270dp"
-
-        android:text="Forgot Password"
-        android:textColor="#F1719D" />
+        android:layout_gravity="right"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/blue"
+        android:text="Forgot Password ?" />
 
     <Button
         android:id="@+id/btnlogin"
@@ -125,7 +128,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="25dp"
-        android:textColor="@color/black"
+        android:textColor="@color/blue"
         android:text="New User? "
         android:textSize="15sp" />
 
