--- a/app/src/main/res/layout/activity_product_info.xml
+++ b/app/src/main/res/layout/activity_product_info.xml
@@ -11,36 +11,59 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_gravity="center"
         >
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="0.1"
             android:id="@+id/backbtn"
             android:src="@drawable/baseline_arrow_back_24"
             android:padding="5dp"
             />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="0.7"
             android:text="Product Details"
             android:textStyle="bold"
             android:textSize="25dp"
             android:textColor="#0070A3"
             android:gravity="center"
             />
+
+        <ImageView
+            android:id="@+id/sharebtn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1"
+            android:src="@drawable/baseline_share_24"
+            android:layout_gravity="center"
+            />
+
+        <ImageView
+            android:id="@+id/savebtn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1"
+            android:src="@drawable/bookmark_24px"
+            android:layout_gravity="center"
+            />
+
     </LinearLayout>
 
     <ImageView
         android:id="@+id/imgv"
-        android:layout_width="300dp"
+        android:layout_width="360dp"
         android:layout_height="230dp"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/round_corner"
         />
 
@@ -50,7 +73,9 @@
         android:orientation="horizontal"
         android:layout_gravity="center"
         android:gravity="center"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="30dp"
+        android:paddingLeft="35dp"
+        android:paddingRight="35dp">
 
         <TextView
             android:id="@+id/producttv"
@@ -58,81 +83,66 @@
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
             android:text="Product Title"
-            android:textColor="@color/black"
+            android:textColor="#0070A3"
             android:textStyle="bold"
-            android:textSize="25dp"
-            android:layout_marginLeft="10dp"/>
+            android:textSize="25dp" />
 
         <TextView
            android:id="@+id/pricetv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Price"
-            android:textColor="@color/black"
+            android:text="price"
+            android:gravity="right"
+            android:textColor="#0070A3"
             android:textStyle="bold"
             android:textSize="25dp"
-            android:layout_weight="1"
+            android:layout_weight="0.8"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="10dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/used_time_24px"/>
+
+        <TextView
+            android:id="@+id/usedtv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3 Months"
+            android:textColor="#000000"
+            android:textSize="18dp"
+            android:layout_marginLeft="10dp"
             />
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="2dp"
-        android:background="@color/black" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Product Description"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="25dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        />
+        android:layout_marginTop="15dp"
+        android:background="#0070A3" />
 
     <TextView
         android:id="@+id/destv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="5dp"
-        android:inputType="textLongMessage"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="25dp"
+        android:foregroundGravity="fill_horizontal"
+        android:gravity="fill|fill_horizontal"
         android:text="this is a sample description"
-        />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_marginTop="10dp">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.5"
-            android:text="Used Duration :"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="25dp"
-            android:layout_marginLeft="10dp"/>
-
-        <TextView
-            android:id="@+id/usedtv"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="3 months"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="25dp"
-            android:layout_weight="1"
-            />
-
-    </LinearLayout>
+        android:textAlignment="viewStart"
+        android:textSize="15dp"
+        tools:ignore="RtlCompat" />
 
     <Button
         android:id="@+id/msgbtn"
