--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -59,7 +59,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     style="@style/TextAppearance.MaterialComponents.Caption"
-                    android:text="Full Name"
+                    android:text=""
                     android:gravity="end"
                     android:layout_marginRight="20dp"
                     />
