--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,10 @@
     <color name="purple_700">#03A8F3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#3F51B5</color>
+    <color name="blue">#3F51B5</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="teal">#0070A3</color>
+    <color name="black">#000000</color>
+    #03A8F3
+    <color name="lightBlue">#03A8F3</color>
 </resources>
